--- a/src/main/webapp/index1.html
+++ b/src/main/webapp/index1.html
@@ -3,13 +3,12 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>配達サービス管理システム（顧客）</title>
 </head>
 <body>
     <div class="container">
         <h1>配達サービス管理システム</h1>
-		<a href="delivaryform.html">配達予約登録</a>
+		<a href="delivaryform.jsp">配達予約登録</a>
     </div>
 </body>
 </html>
